@@ -5,16 +5,18 @@ AUX configobj-4.7.2-fix_tests.patch 326 SHA256 032256274fd056b47281742aa34e97a60
 DIST configobj-4.7.2.zip 143618 SHA256 332a0d20d4d736d521d95cb2cf069b1ac7c858985207db4296f4050396558c49 SHA512 510b7ce461932d504808a9aeb539265b9fddb17c9451076f8b6be796f38617a5095d3c287c78c38a1825d76be462ca0224f5ae3b614f67fd69c6260b399d802f WHIRLPOOL e38ea000479792be4c9ddf17fca8d17bc486cd2ef0363a7fc29922012b485ca8c2a9ac8b7eb06676783b87ca8ec37da41a8a44e7111dcaf07244318e1599924b
 DIST configobj-5.0.1.tar.gz 32840 SHA256 ae0200a5707b2a63f2ed4ffbe211d603b36bb8a0407b74cb224487456e8138c3 SHA512 97369bf8adacd1946b27cba18a5966f136375605e8b9e270dee8a224ee8e09d09c094acd540602cbb500a0034ad8561468de14ad10fdfce62ec489d8a8c5591d WHIRLPOOL ab9be8f7d89f9afb14f0dae9a3fd11d74a429a37bf0ca889f8564b20971db09bb76b8ccfaaca6f9da95f3cf811a3aa593b5722434b157d1e3d99e9aa6fa9f420
 DIST configobj-5.0.2.tar.gz 32973 SHA256 13c062852322079ecfcab030ef384ade0da9cbe8578fc84afbcfdbe036c58773 SHA512 09ea988babc8bc8c6d3cdc66679f1d953bfd262704712d2dbce920008f06c00cfcd42456a439b66e8ae678d8f25102b72c1c86daa34b04413fe24888c5f166ce WHIRLPOOL 9b8d33b0ef151a412ee8f09228aee0a22c428001d7870398563ea9a46d4f3579581529c625d8f98e25857ab45e0bd62d298be9782e498c4d85608e727a37b0e2
+DIST configobj-5.0.3.tar.gz 33155 SHA256 c15b45de09207fcd3bbaeaa3b81267d7e1ee66a43e97e89a628e4d43de0e9598 SHA512 d1bc208d18ed3a9679bc61895c05afc008b43fb01b3071420d53dcb110f7fa8b89e84a8e98e29d42a11873aec0c8df2866e1c0606ef83f3de9daac08f8d72335 WHIRLPOOL ce7e26d9634bcea9a3fc9fb1c165101368cdb17666836018df8bf16f2312d41be2b1cebb04363011b8d404fdfd5c7f52c9f58f8b156b73d3e3eb614458d0b53f
 EBUILD configobj-4.7.2-r1.ebuild 1054 SHA256 8df35336e94f7c80bfd232945511ee7507c9752196c0fd8564e030657c80468e SHA512 66d7592b353b07c1fe3857fb06e446ef7dda714adce7d61bfd78a24810bace3635246a2077a5ae30105f542c9deeccbca7b04a6fd8537c1e191c63176672dacb WHIRLPOOL cc6eecc048c2c1e904cbbd10762aeea208b6f2b6cf457d68af9e3f4a26602769ba91ae1a5a08abbd825e1cdb90fbabc3d24ad579de6a4f81a88a2719749b7d22
 EBUILD configobj-4.7.2-r2.ebuild 1126 SHA256 51e8d0cbb9793e56642df740940f70e1be3ce3d4d529497f18ccc1f5a8260e58 SHA512 54cc0a9106e7305769e05a659244119d1c2245456f3486f16a1610319fa0f6a26c12a34d7084e1c5ddb3374b9ac145680ade9e7d8c1c19cdfce431a8b11da057 WHIRLPOOL c0652a3bc5167f5cbc4f78f73ca52100ed05e5e19b23f9471650add7bb429f25c066567f9f814170940803301afcf32d06de5d0afc85e1c85a4aa4979baffc89
 EBUILD configobj-5.0.1.ebuild 806 SHA256 1270236620591f18b6fd596f35384fbb2340806ccd0bef793615027ad07a3e67 SHA512 e10d8807e94441b19e6b591077ba8047ef0cf4f27d1742d0d919ce3b71f76577e3988e4da2a2f316426ddc3bdd6f9fb1d7f460113371aa759997e1b02080f7fe WHIRLPOOL 443a94afc7849c55e9fe1d2ceb7554b2a2a97f136e95e38d7c64ba8aab2163a2c755d4816949d2333b9b86ec422cc29cdec478b63fff8788f5453222b6e60f00
 EBUILD configobj-5.0.2.ebuild 806 SHA256 74d678723eab360247d3dd5d0da30a86dcba375a8c0aec80b9b5459d8091af87 SHA512 d3047b07ac51ad265cac15e1e472e9d2e4a84643cf5f218dff087456385f5c0d33e255fb720bc194605aea7ca72eda49fa09e02ac6e07dd108f6ed60207d807a WHIRLPOOL f7bfb2ac111e6b0cf3d393dba8b4d261c5d7ac97d98f40d6b87e30b28c1d566809b12dd5262e5aea17b0b360ca9392d5d23188afe54d2dc7aa5bc38b64015a8a
-MISC ChangeLog 6124 SHA256 b4d42d840461123ed23f48c3f717823ad6c07e0f5a6afcfd2531592cba59f860 SHA512 8e4acf1b632f8853528785b81c7785fe6fc51a1592ed5e904412399040a8a1aba7432237fc921cd7b3cded111cb374887d4adaecc278820fae76e1fcfae9490d WHIRLPOOL 0553b64411d3e580f492b2ee5e369bdae441b4b06c97f153dd3a87f0a639ee36be5761a225afd30a499c7fb59e34aa59279af50882e4a6f8626d62c1433930e3
+EBUILD configobj-5.0.3.ebuild 799 SHA256 8fca5b79a6f0954caff09a3c4d8923c66cf1a9294ee5ccb370f0decaf5ddb4b9 SHA512 6cfcc813fe535f6712424a142fd1501e4f6b1c7872690337468a71dbd5dfdc6040c403a6307938198b0f03ea782274cb3b6f329e6bbba4ef90a19f4ba2e8d84b WHIRLPOOL edf1f68b94d7646fc5a0f4e67741f7499a6c582d4c4d452afde52920154c1c5e5b9a7d58f9487ad09decb005cb276337ff68145a48888ce5c1c5109b5afd7b6b
+MISC ChangeLog 6237 SHA256 06a5cd076d4afd389ee6a2c13c7104e3df56034991be70d611d1213a2f2ec9e3 SHA512 132a0fefb41d4e238bf9eac5feddc9d5eafa0915f656e53cd3702b4d2a1a9bf8af29972133c327dd4e91e01794314d5a4ee59d643331b29f30d89b7c38d14ae7 WHIRLPOOL 463312cb74eb083c75efa3efa1477596946f0fa103e8211230f7c94aa953c13b0320d1b08c75d550492a97181adfd5e72c71b65f76788bd777a8943dea5c3fe0
 MISC metadata.xml 444 SHA256 58bb271970c8ce0fba8f1fd76345c313ae3af5beaf1345852db23e1eb0b5aca8 SHA512 8dadff4050f969e5791d9e025b9e232869ca810368513b2001e3d8f70afb601f036dd7cc99dcccd5cffc28c3aae2628167829b1e686e558907d8df39efc5820f WHIRLPOOL bf282d0eb17f6a7047e66b71e88a101bb7b1af1b415c04a603e6e6545fee1f47668ada06d04a5041129e594156b4a039fefb9a13dcdeb15576d700a43cabb1f4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNCImwACgkQso7CE7gHKw2mLQCg0Y+TrrqjdXQFb95NFSvJxlFu
-YRkAoIniHPGCsnj/2FzUasHXtVmRA+7u
-=AHo1
+iEYEAREIAAYFAlNDSioACgkQso7CE7gHKw1opACg0noR9W55z4J0m+zkQeIChie5
+0WkAn37JXPrCAY5W2krin/GLDB+/nxzE
+=+vzX
 -----END PGP SIGNATURE-----
