@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/configobj
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/configobj/ChangeLog,v 1.47 2014/04/07 04:05:57 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/configobj/ChangeLog,v 1.48 2014/04/08 01:07:45 idella4 Exp $
+
+*configobj-5.0.3 (08 Apr 2014)
+
+  08 Apr 2014; Ian Delaney <idella4@gentoo.org> +configobj-5.0.3.ebuild:
+  bump
 
   07 Apr 2014; Ian Delaney <idella4@gentoo.org> -configobj-4.7.2.ebuild,
   configobj-5.0.1.ebuild, configobj-5.0.2.ebuild:
